# BlogDemo

./: .gitignore  LICENSE  README.md  pull.bat  push.bat  push.sh
BalancedTrees/: CMakeLists.txt  CMakeSettings.json
BalancedTrees/src/AVLTree/: AVLTree.h
CodingTranslate/: CMakeLists.txt  README.md
CodingTranslate/libs/qonlinetranslator/src/: qonlinetranslator.cpp  qonlinetranslator.h
CodingTranslate/src/: CMakeLists.txt  main_window.cpp  main_window.h  qui_trayicon.cpp  qui_trayicon.h  source_text_edit.cpp  source_text_edit.h  title_tool_bar.h
CodingTranslate/src/framelessmainwindow/: frame_less_main_window.h
CodingTranslate/src/res/: main.qrc
FastPixel/apps/: CMakeLists.txt  main.cpp
FastPixel/src/: CMakeLists.txt  main_window.cpp  main_window.h  qui_helper.h  singleton.h
FastPixel/src/data/: vector2d.cpp  vector2d.h
FastPixel/src/editor/: edit_scene.h  edit_view.cpp  edit_view.h  editor_data.cpp  editor_data.h  editor_manager.h  editor_mediation.cpp
FastPixel/src/editor/layout/: layout.cpp  layout_bg.cpp
FastPixel/src/palette/: palete_widget.cpp  palete_widget.h  palette_manager.cpp  palette_manager.h  palette_panel_crgb_v.cpp  palette_panel_crgb_v.h  palette_panel_hs_v.cpp  palette_panel_sv_h.cpp
FastPixel/src/res/Style/: style.qss
FastPixel/src/tool/: ellipse_tool.h  paint_bucket_tool.h  pen_tool.h  rect_tool.cpp  stroke_tool.h  tool.h  tool_manager.cpp  tool_widget.cpp  tool_widget.h
ITK/: CMakeLists.txt  README.md
ITK/cmake/: Generate.cmake  clean-all.cmake
ITK/imgs_to_mha/: CMakeLists.txt  main.cpp
ITK/operation_dcm_tag/: CMakeLists.txt  main.cpp
Project/CodingTranslate/libs/qhotkey/: CMakeLists.txt
Project/CodingTranslate/libs/qonlinetranslator/: CMakeLists.txt
Project/CodingTranslate/libs/singleapplication/: CMakeLists.txt
Project/CodingTranslate/plugans/code_translate/: CMakeLists.txt
Project/GithubImageHost/: .gitignore  CMakeLists.txt  README.md
Project/GithubImageHost/src/: main.cpp
Project/GithubImageHost/src/res/: PicxStyle.qss  main.qrc
Project/GithubImageHost/src/util/: GitHubImageHost.h  QUIHelper.cpp  QUIHelper.h  appinit.cpp  appinit.h  github_image_host.cpp  github_image_host.h  network_access.cpp  network_access.h
Project/GithubImageHost/src/widget/: PanelWidget.cpp  PanelWidget.h  ThumbnailLabel.cpp  thumbnail_label.cpp  thumbnail_label.h
Project/GithubImageHost/src/window/: main_window.cpp  main_window.h  main_window.ui
Project/OpenBrowser/: .gitignore  CMakeLists.txt  DeeplvConfig.h.in  Pack.sh  README.md  main.cpp
Project/OpenBrowser/Source/01Business/: DeeplvConfig.h  commandlinemanager.cpp  commandlinemanager.h  openbrowserapplication.cpp  openbrowserapplication.h  quiapplication.cpp  quiapplication.h  quiconfig.cpp  quiconfig.h  quihelper.cpp  quihelper.h  quiiconhelper.cpp  quiiconhelper.h  quilogmanager.cpp  quilogmanager.h  quimenu.cpp  quimenu.h  quimessagebox.cpp  quimessagebox.h  quitrayicon.cpp  quitrayicon.h  quiwidgetmove.cpp  quiwidgetmove.h  stable.h
Project/OpenBrowser/Source/02Resources/: Image.qrc  style.qrc
Project/OpenBrowser/Source/02Resources/Style/: style.qss
Project/OpenBrowser/Source/03DcmModular/: dcmmanager.cpp  dcmmanager.h
Project/OpenBrowser/Source/03ImageModular/: imagebrowsermanager.cpp  imagebrowsermanager.h
Project/OpenBrowser/Source/03ImageModular/PreProcessing/: formimagehandle.cpp  formimagehandle.h  formimagehandle.ui  qopencvprocessing.cpp  qopencvprocessing.h  qopencvwidget.cpp  qopencvwidget.h
Project/OpenBrowser/Source/03ImagesModular/: imagesbrowermanager.cpp  imagesbrowermanager.h
Project/OpenBrowser/Source/03ImagesModular/PreProcessing/: formshow.cpp  formshow.h  formshow.ui
Project/OpenBrowser/Source/03ModelModular/: stlmanager.cpp  stlmanager.h
Project/OpenBrowser/Source/03ModelModular/PreProcessing/: automaticdivision.cpp  automaticdivision.h  (+13 more)
Project/OpenBrowser/Source/04Ui/: formmain.cpp  formmain.h  formmain.ui  formtitle.cpp  formtitle.h  formtitle.ui
Project/OpenBrowser/Source/04Widget/: aboutinfo.cpp  aboutinfo.h  aboutinfo.ui  formleft.cpp  formleft.h  formleft.ui  formmaskwidget.cpp  formmaskwidget.h  formmaskwidget.ui
Project/OpenBrowser/preview_V0/: README.md
Project/OpenBrowser/preview_V1/: README.md
Qt/: CMakeLists.txt
Qt/BeyondXinApi/: CMakeLists.txt  README.md
Qt/BeyondXinApi/src/: handler.cpp  handler.h  main.cpp  router.cpp  router.h
Qt/BullsEye/: BullsEye.cpp  BullsEye.h  main.cpp
Qt/CmakeSourceGroup/: CMakeLists.txt  Group_0_1_.cpp
Qt/DisappearLabel/: Label.h
Qt/DoubleSlider/: DoubleSlider.cpp  DoubleSlider.h
Qt/PictureBlockSelection/: pictureBlockSelectionWidget.cpp
Qt/PictureBlockSelection/resources/: resources.qrc
Qt/PouringDucks/: .gitignore  CMakeLists.txt  PouringDucks  README.md  example.cpp
Qt/PouringDucks/src/: AnimatedTextItem.cpp  AnimatedTextItem.h  Subtitle.h  SubtitleAnimatorWidget.cpp  SubtitleAnimatorWidget.h  WindowScreenRecorder.cpp  WindowScreenRecorder.h
Qt/ProtocalPackage/: CMakeLists.txt  main.cpp
Qt/SonicRhythm/: .clang-format  .gitignore  CMakeLists.txt
Qt/SonicRhythm/src/: CMakeLists.txt  FrequencySpectrumWidget.cpp  FrequencySpectrumWidget.h  TimeWaveformWidget.cpp  TimeWaveformWidget.h  main.cpp  widget.cpp  widget.h
Qt/YiHangService/: .gitignore  CMakeLists.txt  README.md
Qt/YiHangService/src/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  router.cpp  router.h
VTK/EarthVisualization/: .gitignore  CMakeLists.txt  README.md
VTK/EarthVisualization/src/: CMakeLists.txt  QVtkWidget.cpp  QVtkWidget.h  main.cpp  vtkEarthSphere.cpp  vtkEarthSphere.h
VTK/ScalpelCutting/src/: CMakeLists.txt  DrawOverlayWidget.cpp  DrawOverlayWidget.h  QVtkWidget.cpp  QVtkWidget.h  VolumeCutter.cpp  VolumeCutter.h  VolumeCutterGPU.cpp  VolumeCutterGPU.h  main.cpp
VTK/ScalpelCutting/src/resources/: data.qrc
VTK/Simple3DBrowser/: CMakeLists.txt  README.md  S3DBrowser
VTK/Simple3DBrowser/src/: S3DWidget.cpp  S3DWidget.h  main.cpp
VTK/Simple3DBrowser/src/renderer/: S3DGridMapper.cxx  S3DGridMapper.h  S3DRenderPass.cxx  S3DRenderPass.h  S3DRenderer.cxx  S3DRenderer.h
(+250 files in other folders)
